--- a/app/src/main/res/layout/fragment_games.xml
+++ b/app/src/main/res/layout/fragment_games.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:gravity="center"
     android:layout_height="match_parent"
-    tools:context=".GamesFragment">
+    tools:context=".fragments.GamesFragment">
 
     <TextView
         android:id="@+id/click"
