--- a/FragmentBackPress/src/main/res/layout/fragment_camera.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_camera.xml
@@ -12,6 +12,6 @@
             android:textColor="@android:color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Top rated" />
+            android:text="Camera" />
 
 </LinearLayout>
