--- a/FragmentBackPress/src/main/res/layout/fragment_chat.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_chat.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:gravity="center"
     android:layout_height="match_parent"
-    tools:context=".viewpager.GamesFragment">
+    tools:context=".viewpager.fragment.home.ChatFragment">
 
     <TextView
         android:id="@+id/click"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="games" />
+        android:text="Chat" />
 
 </LinearLayout>
