--- a/FragmentBackPress/src/main/res/layout/fragment_home.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.HomeFragment">
+    tools:context=".HomeViewPagerFragment">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
