--- a/FragmentBackPress/src/main/res/layout/fragment_home_feed.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_home_feed.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewpager.fragment.home.HomeFragment">
+    tools:context=".viewpager.fragment.home.HomeFeedFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -57,8 +57,6 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
-
     </LinearLayout>
 
 </LinearLayout>
