--- a/FragmentBackPress/src/main/res/layout/fragment_map.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_map.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewpager.fragment.home.HomeFragment">
+    tools:context=".viewpager.fragment.MapFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
