--- a/FragmentBackPress/src/main/res/layout/activity_main.xml
+++ b/FragmentBackPress/src/main/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
 
     <Button
         android:id="@+id/btnFragment"
+        android:textColor="@android:color/white"
+        android:background="@drawable/button_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -27,6 +29,8 @@
 
     <Button
         android:id="@+id/btnViewPager"
+        android:textColor="@android:color/white"
+        android:background="@drawable/button_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
