--- a/FragmentBackPress/src/main/res/layout/fragment_favorite.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_favorite.xml
@@ -24,6 +24,7 @@
 
         <ImageView
             android:id="@+id/ic_movies"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_home"
             android:layout_weight="1"
             android:layout_width="wrap_content"
@@ -31,6 +32,7 @@
 
         <ImageView
             android:id="@+id/ic_shopping"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_search"
             android:layout_weight="1"
             android:layout_width="wrap_content"
@@ -38,6 +40,7 @@
 
         <ImageView
             android:id="@+id/ic_map"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_add"
             android:layout_weight="1"
             android:layout_width="wrap_content"
@@ -45,6 +48,7 @@
 
         <ImageView
             android:id="@+id/ic_restaurant"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_likes"
             android:layout_weight="1"
             android:layout_width="wrap_content"
@@ -53,6 +57,7 @@
 
         <ImageView
             android:id="@+id/ic_favorite"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_profile"
             android:layout_weight="1"
             android:layout_width="wrap_content"
