material color added 1

--- a/FragmentBackPress/src/main/res/layout/fragment_second.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_second.xml
@@ -7,7 +7,8 @@
     tools:context=".backstack.FirstFragment">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbarFirst"
+        android:id="@+id/toolbarSecond"
+        android:elevation="@dimen/ten"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
