--- a/FragmentBackPress/src/main/res/values/colors.xml
+++ b/FragmentBackPress/src/main/res/values/colors.xml
@@ -4,53 +4,53 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="colorRedPrimary">#aa2e25</color>
-    <color name="colorRedPrimaryDark">#f44336</color>
-
-    <color name="colorPinkPrimary">#a31545</color>
-    <color name="colorPinkPrimaryDark">#e91e63</color>
+    <color name="colorRedPrimaryDark">#aa2e25</color>
+    <color name="colorRedPrimary">#f44336</color>
 
     <color name="colorPurplePrimary">#a31545</color>
     <color name="colorPurplePrimaryDark">#6d1b7b</color>
 
-    <color name="colorDeepPurplePrimary">#482880</color>
-    <color name="colorDeepPurplePrimaryDark">#673ab7</color>
+    <color name="colorPinkPrimaryDark">#a31545</color>
+    <color name="colorPinkPrimary">#e91e63</color>
 
-    <color name="colorIndigoPrimary">#2c387e</color>
-    <color name="colorIndigoPrimaryDark">#3f51b5</color>
+    <color name="colorDeepPurplePrimaryDark">#482880</color>
+    <color name="colorDeepPurplePrimary">#673ab7</color>
 
-    <color name="colorBluePrimary">#1769aa</color>
-    <color name="colorBluePrimaryDark">#2196f3</color>
+    <color name="colorIndigoPrimaryDark">#2c387e</color>
+    <color name="colorIndigoPrimary">#3f51b5</color>
 
-    <color name="colorLightBluePrimary">#0276aa</color>
-    <color name="colorLightBluePrimaryDark">#03a9f4</color>
+    <color name="colorBluePrimaryDark">#1769aa</color>
+    <color name="colorBluePrimary">#2196f3</color>
 
-    <color name="colorCyanPrimary">#008394</color>
-    <color name="colorCyanPrimaryDark">#00bcd4</color>
+    <color name="colorLightBluePrimaryDark">#0276aa</color>
+    <color name="colorLightBluePrimary">#03a9f4</color>
 
-    <color name="colorTealPrimary">#00695f</color>
-    <color name="colorTealPrimaryDark">#009688</color>
+    <color name="colorCyanPrimaryDark">#008394</color>
+    <color name="colorCyanPrimary">#00bcd4</color>
 
-    <color name="colorGreenPrimary">#357a38</color>
-    <color name="colorGreenPrimaryDark">#4caf50</color>
+    <color name="colorTealPrimaryDark">#00695f</color>
+    <color name="colorTealPrimary">#009688</color>
 
-    <color name="colorLightGreenPrimary">#618833</color>
-    <color name="colorLightGreenPrimaryDark1">#8bc34a</color>
+    <color name="colorGreenPrimaryDark">#357a38</color>
+    <color name="colorGreenPrimary">#4caf50</color>
 
-    <color name="colorLimePrimary">#8f9a27</color>
-    <color name="colorLimePrimaryDark">#cddc39</color>
+    <color name="colorLightGreenPrimaryDark">#618833</color>
+    <color name="colorLightGreenPrimary">#8bc34a</color>
 
-    <color name="colorYellowPrimary">#b2a429</color>
-    <color name="colorYellowPrimaryDark">#ffeb3b</color>
+    <color name="colorLimePrimaryDark">#8f9a27</color>
+    <color name="colorLimePrimary">#cddc39</color>
 
-    <color name="colorAmberPrimary">#b28704</color>
-    <color name="colorAmberPrimaryDark">#ffc107</color>
+    <color name="colorYellowPrimaryDark">#b2a429</color>
+    <color name="colorYellowPrimary">#ffeb3b</color>
 
-    <color name="colorOrangePrimary">#b26a00</color>
-    <color name="colorOrangePrimaryDark">#ff9800</color>
+    <color name="colorAmberPrimaryDark">#b28704</color>
+    <color name="colorAmberPrimary">#ffc107</color>
 
-    <color name="colorDeepOrangePrimary">#b23c17</color>
-    <color name="colorDeepOrangePrimaryDark">#ff5722</color>
+    <color name="colorOrangePrimaryDark">#b26a00</color>
+    <color name="colorOrangePrimary">#ff9800</color>
+
+    <color name="colorDeepOrangePrimaryDark">#b23c17</color>
+    <color name="colorDeepOrangePrimary">#ff5722</color>
 
 
 
