--- a/FragmentBackPress/src/main/res/layout/activity_main.xml
+++ b/FragmentBackPress/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,12 +20,7 @@
         android:layout_marginBottom="8dp"
         android:text="Fragment"
         android:textAllCaps="false"
-        app:layout_constraintBottom_toTopOf="@+id/btnViewPager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.222"
-        app:layout_constraintVertical_chainStyle="packed" />
+        />
 
     <Button
         android:id="@+id/btnViewPager"
@@ -39,18 +34,6 @@
         android:layout_marginBottom="8dp"
         android:text="ViewPager"
         android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnFragment" />
+     />
 
-    <android.support.constraint.Group
-        android:id="@+id/group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="visible"
-        app:constraint_referenced_ids="btnFragment,btnViewPager" />
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
