--- a/FragmentBackPress/src/main/res/layout/fragment_chat.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_chat.xml
@@ -2,10 +2,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@android:color/holo_blue_bright"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".viewpager.fragment.home.ChatFragment">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarHomeFeed"
+        android:elevation="@dimen/ten"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:background="@color/colorBluePrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        >
+
+        <TextView
+            android:text="@string/app_name"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:textColor="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.v7.widget.Toolbar>
 
     <TextView
         android:id="@+id/click"
