--- a/FragmentBackPress/src/main/res/layout/fragment_first.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_first.xml
@@ -8,6 +8,7 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarFirst"
+        android:elevation="@dimen/ten"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
