--- a/FragmentBackPress/src/main/res/layout/fragment_home_feed.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_home_feed.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@android:color/holo_green_light"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,14 +10,54 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarHomeFeed"
+        android:elevation="@dimen/ten"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorBluePrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        >
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="@string/app_name"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:padding="@dimen/ten"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/ic_notification"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.Toolbar>
+
     <TextView
         android:layout_weight="1"
+        android:layout_below="@+id/toolbarHomeFeed"
         android:textColor="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home Feed" />
 
     <LinearLayout
+        android:layout_alignParentBottom="true"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
