--- a/FragmentBackPress/src/main/res/values/dimens.xml
+++ b/FragmentBackPress/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="button_radius_large">10dp</dimen>
+    <dimen name="ten">10dp</dimen>
 </resources>
