--- a/FragmentBackPress/src/main/res/layout/fragment_home_feed.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_home_feed.xml
@@ -20,16 +20,26 @@
         android:theme="?attr/actionBarTheme"
         >
 
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:text="@string/app_name"
+            <ImageView
+                android:id="@+id/ic_menu"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
+                android:src="@drawable/ic_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="@string/app_name"
                 style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:layout_toRightOf="@+id/ic_menu"
+                android:layout_centerVertical="true"
+                android:layout_centerInParent="true"
                 android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
