--- a/FragmentBackPress/src/main/res/layout/fragment_restaurant.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_restaurant.xml
@@ -5,7 +5,7 @@
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewpager.fragment.RestaurantFragment">
+    tools:context=".viewpager.fragment.other.NotificationFragment">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarRestaurent"
