--- a/FragmentBackPress/src/main/res/values/colors.xml
+++ b/FragmentBackPress/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#d81b60</color>
 
     <color name="colorRedPrimaryDark">#aa2e25</color>
     <color name="colorRedPrimary">#f44336</color>
