--- a/FragmentBackPress/src/main/res/layout/activity_main.xml
+++ b/FragmentBackPress/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".backstack.MainFragmentActivity"
     tools:layout_editor_absoluteY="81dp">
 
+
     <Button
         android:id="@+id/btnFragment"
         android:textColor="@android:color/white"
@@ -34,6 +35,34 @@
         android:layout_marginBottom="8dp"
         android:text="ViewPager"
         android:textAllCaps="false"
-     />
+        />
+
+    <!--<Button-->
+        <!--android:id="@+id/btnFragment"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:background="@drawable/button_background"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:text="Fragment"-->
+        <!--android:textAllCaps="false"-->
+        <!--/>-->
+
+    <!--<Button-->
+        <!--android:id="@+id/btnViewPager"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:background="@drawable/button_background"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:text="ViewPager"-->
+        <!--android:textAllCaps="false"-->
+     <!--/>-->
 
 </LinearLayout>
