--- a/FragmentBackPress/src/main/res/layout/fragment_camera.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_camera.xml
@@ -6,32 +6,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <RelativeLayout
+<!--    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbarHomeFeed"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbarHomeFeed"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorBluePrimary"
-            android:elevation="@dimen/ten"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme">
+            android:layout_height="wrap_content">
 
-            <TextView
-                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbarHomeFeed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textColor="@android:color/white" />
+                android:background="@color/colorBluePrimary"
+                android:elevation="@dimen/ten"
+                android:minHeight="?attr/actionBarSize"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                android:theme="?attr/actionBarTheme">
 
-        </android.support.v7.widget.Toolbar>
+                <TextView
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textColor="@android:color/white" />
+
+            </android.support.v7.widget.Toolbar>
+
+        </android.support.design.widget.AppBarLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/cameraRecyclerView"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:listitem="@layout/item_camera"
-            android:layout_below="@+id/toolbarHomeFeed"
+            android:layout_below="@+id/appbarHomeFeed"
             android:layout_above="@+id/toolbarHomeFeedBottom"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -59,8 +69,73 @@
 
         </android.support.v7.widget.Toolbar>
 
-    </RelativeLayout>
+    </RelativeLayout>-->
 
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarHomeFeed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbarHomeFeed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorBluePrimary"
+            android:elevation="@dimen/ten"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:layout_scrollFlags="scroll|enterAlways|snap">
+
+            <TextView
+                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textColor="@android:color/white" />
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/cameraRecyclerView"
+        tools:listitem="@layout/item_camera"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarHomeFeedBottom"
+        app:layout_anchorGravity="bottom"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbarHomeFeedBottom"
+            android:elevation="@dimen/ten"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorBluePrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            >
+
+            <TextView
+                android:text="@string/app_name"
+                android:visibility="gone"
+                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:textColor="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton2"
