--- a/FragmentBackPress/src/main/res/layout/item_camera.xml
+++ b/FragmentBackPress/src/main/res/layout/item_camera.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
-    android:padding="@dimen/ten"
+    android:layout_margin="@dimen/ten"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
