--- a/FragmentBackPress/src/main/res/layout/fragment_camera.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_camera.xml
@@ -71,9 +71,9 @@
 
     </RelativeLayout>-->
 
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbarHomeFeed"
+        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -88,12 +88,9 @@
             android:theme="?attr/actionBarTheme"
             app:layout_scrollFlags="scroll|enterAlways|snap">
 
-            <TextView
-                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            <android.support.v7.widget.SearchView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textColor="@android:color/white" />
+                android:layout_height="wrap_content"></android.support.v7.widget.SearchView>
 
         </android.support.v7.widget.Toolbar>
 
@@ -102,12 +99,14 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cameraRecyclerView"
         tools:listitem="@layout/item_camera"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.AppBarLayout
+        android:visibility="gone"
         android:id="@+id/appbarHomeFeedBottom"
         app:layout_anchorGravity="bottom"
         android:layout_gravity="bottom"
@@ -138,9 +137,8 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.FloatingActionButton
+        android:visibility="gone"
         android:id="@+id/floatingActionButton2"
-        app:layout_anchor="@id/toolbarHomeFeedBottom"
-        app:layout_anchorGravity="bottom|right|end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -150,6 +148,8 @@
         android:background="@color/colorAccent"
         android:clickable="true"
         android:src="@drawable/ic_add_fab"
-        app:fabSize="normal" />
+        app:fabSize="normal"
+        app:layout_anchor="@id/toolbarHomeFeedBottom"
+        app:layout_anchorGravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
