--- a/FragmentBackPress/src/main/res/layout/fragment_feed.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_feed.xml
@@ -26,13 +26,13 @@
 
             <ImageView
                 android:id="@+id/ic_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/ic_menu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:src="@drawable/ic_menu" />
 
             <TextView
                 android:text="@string/app_name"
@@ -61,7 +61,7 @@
     <TextView
         android:layout_weight="1"
         android:layout_below="@+id/toolbarHomeFeed"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home Feed" />
