--- a/FragmentBackPress/src/main/res/layout/fragment_profile.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_profile.xml
@@ -1,39 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewpager.fragment.other.NotificationFragment">
+    tools:context=".viewpager.fragment.other.ProfileFragment">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbarRestaurent"
+        android:id="@+id/toolbarHomeFeed"
+        app:title="@string/app_name"
         android:elevation="@dimen/ten"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:background="@color/colorOrangePrimary"
+        android:background="@color/colorDeepOrangePrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        >
-
-        <TextView
-            android:text="@string/app_name"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:textColor="@android:color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </android.support.v7.widget.Toolbar>
+        />
 
     <TextView
         android:layout_weight="1"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="restaurant" />
+        android:text="profile" />
 
     <LinearLayout
         android:padding="10dp"
