--- a/FragmentBackPress/src/main/res/layout/fragment_search.xml
+++ b/FragmentBackPress/src/main/res/layout/fragment_search.xml
@@ -30,10 +30,10 @@
 
     <TextView
         android:layout_weight="1"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="shoping" />
+        android:text="search" />
 
     <LinearLayout
         android:padding="10dp"
